--- a/wp-content/themes/understrap-child/sass/theme/partials/_real-time-refactoring.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_real-time-refactoring.scss
@@ -2,7 +2,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-z-index: -1;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+// z-index: -1;
 }
 
 .pagination--white{
